syntax = "proto3";

package smartlist;

option java_package = "com.proto.smartlist";
option java_multiple_files = true;


message Smartlist {
    string id = 1;
    string item = 2;
    double price = 3;
    int32 barcode = 4;
}

message CreateSmartListRequest{
    Smartlist smartlist = 1;
}

message CreateSmartListResponse{
    Smartlist smartlist = 1;
}

message ReadSmartListRequest{
    string item_id = 1;
}

message ReadSmartListResponse{
    Smartlist smartlist = 1;
}

message UpdateSmartListRequest{
    Smartlist smartlist = 1;
}

message UpdateSmartListResponse{
    Smartlist smartlist = 1;
}

service SmartListService{
    rpc CreateSmartList(CreateSmartListRequest) returns (CreateSmartListResponse){};
    rpc ReadSmartList(ReadSmartListRequest) returns (ReadSmartListResponse) {};
    rpc UpdateSmartList(UpdateSmartListRequest) returns(UpdateSmartListResponse) {};

}